tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/method_sig_not_match3.bal
import ballerina/java;

public function acceptIntUnionReturnWhichThrowsCheckedException(int s) returns int|string|float|boolean = @java:Method {
    'class:"org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"
} external;
